--- a/style.prefixed.css
+++ b/style.prefixed.css
@@ -10,8 +10,10 @@ body {
 	margin: 0 auto;
 	max-width: 700px;
 	background-color: #FFF;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
+	-ms-flex-direction: column;
+	    flex-direction: column;
 }
 
 header {
